<resources>
    <string name="app_name">Speedometer</string>
    <string name="title_home">History</string>
    <string name="title_dashboard">Speedometer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="initial_speed">0</string>
    <string name="kilometers_per_hour">km/h</string>
    <string name="initial_location">1.23,4.56</string>
    <string name="settings_speed_limit_text">Speed Limit</string>
    <string name="settings_speed_limit_initial">0</string>
    <string name="button_apply">Apply</string>
    <string name="button_cancel">Cancel</string>
    <string name="slider_description">Specify speed limit</string>
    <string name="warning">SPEED LIMIT EXCEEDED.SLOW DOWN</string>
    <string name="db_table_timestamp">Timestamp</string>
    <string name="db_table_speed">Speed</string>
    <string name="db_table_location">Location</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>